# FFTlib

./: CMakeLists.txt  ReadMe.txt
Dependances/: FFTW3LibraryDepends.cmake
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  FFTlib.cpp  FFTlib.h
